--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 			<div class="container">
 				<h1> Be creative, think freely</h1>
 				<h2>Consider this site as a safe place, let your creativity flow and enjoy.</h2>
-				<a href="#" class="btn-blue">Apply now</a>
+				<a href="#apply-section" class="btn-blue">Apply now</a>
 			</div>	
 		</div>
 
 
 		<div class="container">
 			<h2>Discover my own hobbies</h2>
+			<p>Hi, I'm Alice. Let me introduce to you some of my passions! Don't hesitate to give me your opinions, and to post your own creations! Above all, remember, be creative, be free!</p>
 			<div class="cards">
 				<div class="card">
 					<img src="images/creation1.jpeg" alt="Sewing Tutorial">
@@ -34,8 +35,10 @@
 				</div>
 			</div>
 		</div>
-				
-		<div data-tf-widget="IQRwIcIk" data-tf-iframe-props="title=My typeform" data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>				
+		
+		<div id=#apply-section>
+			<div data-tf-widget="IQRwIcIk" data-tf-iframe-props="title=My typeform" data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>	
+		</div>			
 	</body>
 
 </html>
